# componentsdb-rs

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  taskfile.yaml
compose/db/docker-entrypoint-initdb.d/: 10-create-databases.sql  10-create-users.sql  20-grant-database-permissions.sql
migrations/2024-08-24-080603_initial_schema/: down.sql  up.sql
src/: db.rs  graphql.rs  lib.rs  models.rs  schema.rs  testing.rs
src/graphql/: context.rs  cursor.rs  schema.rs  testing.rs
src/testing/: mod.rs
